--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,6 @@
-git+https://github.com/nghorbani/body_visualizer
+# git+https://github.com/nghorbani/body_visualizer
 git+https://github.com/MPI-IS/configer.git
 git+https://github.com/MPI-IS/mesh.git
-
-# tqdm
-# numpy
-# dotmap
-# pytorch-lightning
-# PyYAML
-# torch
-# transforms3d==0.3.1
 
 tqdm==4.47.0
 numpy==1.18.5
@@ -17,9 +9,3 @@ pytorch-lightning==0.9.0
 PyYAML==5.4.1
 torch==1.7.1
 transforms3d==0.3.1
-
-pytorch3d
-omegaconf
-loguru
-matplotlib
-pyrender
